--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotline Services</title>
+     <!--daisy ui cdn-->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <!--tailwind cdn-->
+     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4">
+     </script>
+     <!--font awsome-->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+     <!--google font-->
+     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section>
+        <nav class="border-2 border-red-500 flex justify-between items-center w-full mx-auto h-[100px]">
+            <div class=" flex ml-[60px]">
+                <img src="./assets/logo.png" class="w-[50px] h-[50px]" alt="">
+                <h1 class="font-extrabold text-xl text-[#006747] ml-3">Emergency<br> Service</h1>
+            </div>
+            <div class="flex gap-5 mr-[60px]">
+                <div class="">
+                    <button class=" flex gap-3 w-[123px] h-[52px] justify-center items-center bg-[#41ff6b1a] rounded-[50px] font-bold text-[16px]">0 <img src="./assets/heart.png" class="w-[30px] h-[30px]" alt=""></button>
+                </div>
+                <div class="">
+                    <button class=" flex gap-3 w-[123px] h-[52px] justify-center items-center bg-[#41ff6b1a] rounded-[50px] font-bold text-[16px]">100 <img src="./assets/coin.png" class="w-[30px] h-[30px]" alt=""></button>
+                </div>
+                <div class="">
+                    <button class=" flex gap-3 w-[123px] h-[52px] justify-center items-center bg-[#00a63e] text-white text-[16px] font-inter font-bold rounded-[50px]">2 Copy</button>
+                </div>
+            </div>
+        </nav>
+    </section>
 </body>
 </html>
