--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 <body>
     <section>
-        <nav class="border-2 border-red-500 flex justify-between items-center w-full mx-auto h-[100px]">
+        <!--navbar-->
+        <nav class=" flex justify-between items-center w-full mx-auto h-[100px]">
             <div class=" flex ml-[60px]">
                 <img src="./assets/logo.png" class="w-[50px] h-[50px]" alt="">
                 <h1 class="font-extrabold text-xl text-[#006747] ml-3">Emergency<br> Service</h1>
@@ -34,5 +35,167 @@
             </div>
         </nav>
     </section>
+
+    <!--bannar section-->
+    <div class="w-full h-[239px] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center p-2">
+        <img src="./assets/logo-dark.png" class="w-[92px] h-[92px] mx-auto mt-[20px]" alt="">
+        <h1 class="text-[40px] font-bold text-white">Emergency Service Directory</h1>
+        <p class="text-xl text-white mt-3">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+    </div>
+
+    <!--card section-->
+    <div class="parent_div flex justify-between bg-[#f5fff6] w-full h-[1140px] border-2 border-red-500">
+        <div class="left_div ml-[60px] mt-[48px] grid grid-cols-3 gap-[30px] border-2 border-green-500 w-[1440px] h-[1140px]">
+            <div class="card-first w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+                <div class="flex justify-between items-center">
+                    <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+                        <img src="./assets/emergency.png" class="w-[32px] h-[32px]" alt="">
+                    </div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h1 class="font-bold text-2xl mt-[16px]">National Emergency Number</h1>
+                <p class="text-[#5c5c5c]">National Emergency</p>
+                <h1 class="text-3xl font-bold mt-[24px] mb-[3px]">999</h1>
+                <button class=" bg-[#f2f2f2] w-[53px] h-[37px] rounded-3xl">All</button>
+                <div class="btn-first-card flex gap-5 mt-[24px]">
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] text-[#5c5c5c]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
+                </div>
+            </div>
+            <div class="card-second w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+                <div class="flex justify-between items-center">
+                    <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+                        <img src="./assets/police.png" class="w-[32px] h-[32px]" alt="">
+                    </div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h1 class="font-bold text-2xl mt-[16px]">Police Helpline Number</h1>
+                <p class="text-[#5c5c5c]">Police</p>
+                <h1 class="text-3xl font-bold mt-[24px] mb-[3px]">999</h1>
+                <button class=" bg-[#f2f2f2] w-[53px] h-[37px] rounded-3xl">Police</button>
+                <div class="btn-first-card flex gap-5 mt-[24px]">
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] text-[#5c5c5c]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
+                </div>
+            </div>
+            <div class="card-third w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+                <div class="flex justify-between items-center">
+                    <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+                        <img src="./assets/fire-service.png" class="w-[32px] h-[32px]" alt="">
+                    </div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h1 class="font-bold text-2xl mt-[16px]">Fire Service Number</h1>
+                <p class="text-[#5c5c5c]">Fire Service</p>
+                <h1 class="text-3xl font-bold mt-[24px] mb-[3px]">999</h1>
+                <button class=" bg-[#f2f2f2] w-[53px] h-[37px] rounded-3xl">Fire</button>
+                <div class="btn-first-card flex gap-5 mt-[24px]">
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] text-[#5c5c5c]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
+                </div>
+            </div>
+            <div class="card-fourth w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+                <div class="flex justify-between items-center">
+                    <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+                        <img src="./assets/ambulance.png" class="w-[32px] h-[32px]" alt="">
+                    </div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h1 class="font-bold text-2xl mt-[16px]">Ambulance Service</h1>
+                <p class="text-[#5c5c5c]">Ambulance</p>
+                <h1 class="text-3xl font-bold mt-[24px] mb-[3px]">1994-999999</h1>
+                <button class=" bg-[#f2f2f2] w-[53px] h-[37px] rounded-3xl">Health</button>
+                <div class="btn-first-card flex gap-5 mt-[24px]">
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] text-[#5c5c5c]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
+                </div>
+            </div>
+            <div class="card-fifth w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+                <div class="flex justify-between items-center">
+                    <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+                        <img src="./assets/brac.png" class="w-[32px] h-[32px]" alt="">
+                    </div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h1 class="font-bold text-2xl mt-[16px]">Women & Child Helpline</h1>
+                <p class="text-[#5c5c5c]">Women & Child Helpline</p>
+                <h1 class="text-3xl font-bold mt-[24px] mb-[3px]">109</h1>
+                <button class=" bg-[#f2f2f2] w-[53px] h-[37px] rounded-3xl">Help</button>
+                <div class="btn-first-card flex gap-5 mt-[24px]">
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] text-[#5c5c5c]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
+                </div>
+            </div>
+            <div class="card-six w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+                <div class="flex justify-between items-center">
+                    <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+                        <img src="./assets/police.png" class="w-[32px] h-[32px]" alt="">
+                    </div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h1 class="font-bold text-2xl mt-[16px]">Anti-Corruption Helpline</h1>
+                <p class="text-[#5c5c5c]">Anti-Corruption</p>
+                <h1 class="text-3xl font-bold mt-[24px] mb-[3px]">106</h1>
+                <button class=" bg-[#f2f2f2] w-[53px] h-[37px] rounded-3xl">Govt.</button>
+                <div class="btn-first-card flex gap-5 mt-[24px]">
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] text-[#5c5c5c]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
+                </div>
+            </div>
+            <div class="card-seven w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+                <div class="flex justify-between items-center">
+                    <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+                        <img src="./assets/emergency.png" class="w-[32px] h-[32px]" alt="">
+                    </div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h1 class="font-bold text-2xl mt-[16px]">Electricity Helpline</h1>
+                <p class="text-[#5c5c5c]">Electricity Outage</p>
+                <h1 class="text-3xl font-bold mt-[24px] mb-[3px]">16216</h1>
+                <button class=" bg-[#f2f2f2] w-[53px] h-[37px] rounded-3xl">Electricity</button>
+                <div class="btn-first-card flex gap-5 mt-[24px]">
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] text-[#5c5c5c]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
+                </div>
+            </div>
+            <div class="card-eight w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+                <div class="flex justify-between items-center">
+                    <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+                        <img src="./assets/brac.png" class="w-[32px] h-[32px]" alt="">
+                    </div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h1 class="font-bold text-2xl mt-[16px]">Brac Helpline</h1>
+                <p class="text-[#5c5c5c]">Brac</p>
+                <h1 class="text-3xl font-bold mt-[24px] mb-[3px]">16445</h1>
+                <button class=" bg-[#f2f2f2] w-[53px] h-[37px] rounded-3xl">NGO</button>
+                <div class="btn-first-card flex gap-5 mt-[24px]">
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] text-[#5c5c5c]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
+                </div>
+            </div>
+            <div class="card-nine w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+                <div class="flex justify-between items-center">
+                    <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+                        <img src="./assets/Bangladesh-Railway.png" class="w-[32px] h-[32px]" alt="">
+                    </div>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <h1 class="font-bold text-2xl mt-[16px]">Bangladesh Railway Helpline </h1>
+                <p class="text-[#5c5c5c]">Bangladesh Railway</p>
+                <h1 class="text-3xl font-bold mt-[24px] mb-[3px]">163</h1>
+                <button class=" bg-[#f2f2f2] w-[53px] h-[37px] rounded-3xl">Travel</button>
+                <div class="btn-first-card flex gap-5 mt-[24px]">
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] text-[#5c5c5c]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
+                </div>
+            </div>
+        </div> 
+
+        <div class="right_div mt-[48px] border-2 border-blue-500 w-[500px] h-[1140px]" >
+
+        </div>>
+    </div>
+    
 </body>
 </html>
