change the box border color

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!--card section-->
     <div class="parent_div flex justify-between bg-[#f5fff6] w-full h-[1140px] border-2 border-red-500">
         <div class="left_div ml-[60px] mt-[48px] grid grid-cols-3 gap-[30px] border-2 border-green-500 w-[1440px] h-[1140px]">
-            <div class="card-first w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+            <div class="card-first w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/emergency.png" class="w-[32px] h-[32px]" alt="">
@@ -62,7 +62,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-second w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+            <div class="card-second w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/police.png" class="w-[32px] h-[32px]" alt="">
@@ -78,7 +78,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-third w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+            <div class="card-third w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/fire-service.png" class="w-[32px] h-[32px]" alt="">
@@ -94,7 +94,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-fourth w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+            <div class="card-fourth w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/ambulance.png" class="w-[32px] h-[32px]" alt="">
@@ -110,7 +110,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-fifth w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+            <div class="card-fifth w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/brac.png" class="w-[32px] h-[32px]" alt="">
@@ -126,7 +126,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-six w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+            <div class="card-six w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/police.png" class="w-[32px] h-[32px]" alt="">
@@ -142,7 +142,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-seven w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+            <div class="card-seven w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/emergency.png" class="w-[32px] h-[32px]" alt="">
@@ -158,7 +158,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-eight w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+            <div class="card-eight w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/brac.png" class="w-[32px] h-[32px]" alt="">
@@ -174,7 +174,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-nine w-[436px] h-[360px] border-2 border-green-500 bg-white p-7 rounded-xl">
+            <div class="card-nine w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/Bangladesh-Railway.png" class="w-[32px] h-[32px]" alt="">
