--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 <body>
     <section>
         <!--navbar-->
-        <nav class=" flex justify-between items-center w-full mx-auto h-[100px]">
+        <nav class=" flex justify-between items-center gap-3 w-full mx-auto h-[100px]">
             <div class=" flex ml-[60px]">
                 <img src="./assets/logo.png" class="w-[50px] h-[50px]" alt="">
                 <h1 class="font-extrabold text-xl text-[#006747] ml-3">Emergency<br> Service</h1>
             </div>
+            
+
             <div class="flex gap-5 mr-[60px]">
                 <div class="">
                     <button class=" flex gap-3 w-[123px] h-[52px] justify-center items-center bg-[#41ff6b1a] rounded-[50px] font-bold text-[16px]">0 <img src="./assets/heart.png" class="w-[30px] h-[30px]" alt=""></button>
@@ -44,9 +46,9 @@
     </div>
 
     <!--card section-->
-    <div class="parent_div flex justify-between bg-[#f5fff6] w-full h-full border-2 border-red-500">
-        <div class="left_div ml-[60px] mt-[48px] mb-[45px] grid grid-cols-3 gap-[30px] border-2 border-green-500 w-[75%] h-[1140px]">
-            <div class="card-first w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
+    <div class="parent_div flex justify-between bg-[#f5fff6] w-full h-full ">
+        <div class="left_div ml-[60px] mt-[48px] mb-[45px] grid grid-cols-3 gap-[] w-[75%] h-[1140px]">
+            <div class="card-first w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl shadow-sm">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/emergency.png" class="w-[32px] h-[32px]" alt="">
@@ -62,7 +64,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-second w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
+            <div class="card-second w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl shadow-sm">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/police.png" class="w-[32px] h-[32px]" alt="">
@@ -78,7 +80,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-third w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
+            <div class="card-third w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl shadow-sm">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/fire-service.png" class="w-[32px] h-[32px]" alt="">
@@ -94,7 +96,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-fourth w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
+            <div class="card-fourth w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl shadow-sm">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/ambulance.png" class="w-[32px] h-[32px]" alt="">
@@ -110,7 +112,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-fifth w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
+            <div class="card-fifth w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl shadow-sm">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/brac.png" class="w-[32px] h-[32px]" alt="">
@@ -126,7 +128,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-six w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
+            <div class="card-six w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl shadow-sm">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/police.png" class="w-[32px] h-[32px]" alt="">
@@ -142,7 +144,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-seven w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
+            <div class="card-seven w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl shadow-sm">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/emergency.png" class="w-[32px] h-[32px]" alt="">
@@ -152,13 +154,13 @@
                 <h1 class="font-bold text-2xl mt-[16px]">Electricity Helpline</h1>
                 <p class="text-[#5c5c5c]">Electricity Outage</p>
                 <h1 class="text-3xl font-bold mt-[24px] mb-[3px]">16216</h1>
-                <button class=" bg-[#f2f2f2] w-[53px] h-[37px] rounded-3xl">Electricity</button>
+                <button class=" bg-[#f2f2f2] w-[70px] h-[37px] rounded-3xl">Electricity</button>
                 <div class="btn-first-card flex gap-5 mt-[24px]">
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] text-[#5c5c5c]"><i class="fa-regular fa-copy"></i> Copy</button>
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-eight w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
+            <div class="card-eight w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl shadow-sm">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/brac.png" class="w-[32px] h-[32px]" alt="">
@@ -174,7 +176,7 @@
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card-nine w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl">
+            <div class="card-nine w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl shadow-sm">
                 <div class="flex justify-between items-center">
                     <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
                         <img src="./assets/Bangladesh-Railway.png" class="w-[32px] h-[32px]" alt="">
@@ -192,54 +194,54 @@
             </div>
         </div> 
 
-        <div class="right_div mt-[48px] mr-[60px] border-2 border-blue-500 w-[25%] h-[1140px] bg-white p-10 rounded-xl" >
+        <div class="right_div mt-[48px] mr-[60px] w-[25%] h-[1140px] bg-white p-10 rounded-xl shadow-sm" >
             <div class="flex justify-between items-center">
                 <h1 class="text-xl font-bold"><i class="fa-solid fa-clock"></i> Call History</h1>
                 <button class="w-[123px] h-[52px] justify-center items-center bg-[#00a63e] text-white text-[16px] font-inter font-bold rounded-[50px]">Clear</button>
              </div>
 
              <div class="mt-[18px]">
-                <div class="w-full h-[83px] border-2 border-gray-500 bg-[#fafafa] rounded-lg p-4">
+                <div class="w-full h-[83px] bg-[#fafafa] rounded-lg p-4">
                 <h1 class="text-lg font-bold">National Emergency Number</h1>
                 <P class="text-[#5c5c5c]">999</P>
                 </div>
 
-                <div class="w-full h-[83px] border-2 border-gray-500 bg-[#fafafa] rounded-lg p-4 mt-4">
+                <div class="w-full h-[83px] bg-[#fafafa] rounded-lg p-4 mt-4">
                 <h1 class="text-lg font-bold">Police Helpline Number</h1>
                 <P class="text-[#5c5c5c]">999</P>
                 </div>
 
-                <div class="w-full h-[83px] border-2 border-gray-500 bg-[#fafafa] rounded-lg p-4 mt-4">
+                <div class="w-full h-[83px] bg-[#fafafa] rounded-lg p-4 mt-4">
                 <h1 class="text-lg font-bold">Fire Service Number</h1>
                 <P class="text-[#5c5c5c]">999</P>
                 </div>
 
-                <div class="w-full h-[83px] border-2 border-gray-500 bg-[#fafafa] rounded-lg p-4 mt-4">
+                <div class="w-full h-[83px] bg-[#fafafa] rounded-lg p-4 mt-4">
                 <h1 class="text-lg font-bold">Ambulance Service</h1>
                 <P class="text-[#5c5c5c]">1994-999999</P>
                 </div>
 
-                <div class="w-full h-[83px] border-2 border-gray-500 bg-[#fafafa] rounded-lg p-4 mt-4">
+                <div class="w-full h-[83px] bg-[#fafafa] rounded-lg p-4 mt-4">
                 <h1 class="text-lg font-bold">Women & Child Helpline</h1>
                 <P class="text-[#5c5c5c]">109</P>
                 </div>
 
-                <div class="w-full h-[83px] border-2 border-gray-500 bg-[#fafafa] rounded-lg p-4 mt-4">
+                <div class="w-full h-[83px] bg-[#fafafa] rounded-lg p-4 mt-4">
                 <h1 class="text-lg font-bold">Anti-Corruption Helpline</h1>
                 <P class="text-[#5c5c5c]">106</P>
                 </div>
 
-                <div class="w-full h-[83px] border-2 border-gray-500 bg-[#fafafa] rounded-lg p-4 mt-4">
+                <div class="w-full h-[83px] bg-[#fafafa] rounded-lg p-4 mt-4">
                 <h1 class="text-lg font-bold">Electricity Helpline</h1>
                 <P class="text-[#5c5c5c]">16216</P>
                 </div>
                 
-                <div class="w-full h-[83px] border-2 border-gray-500 bg-[#fafafa] rounded-lg p-4 mt-4">
+                <div class="w-full h-[83px] bg-[#fafafa] rounded-lg p-4 mt-4">
                 <h1 class="text-lg font-bold">Brac Helpline</h1>
                 <P class="text-[#5c5c5c]">16445</P>
                 </div>
 
-                <div class="w-full h-[83px] border-2 border-gray-500 bg-[#fafafa] rounded-lg p-4 mt-4">
+                <div class="w-full h-[83px] bg-[#fafafa] rounded-lg p-4 mt-4">
                 <h1 class="text-lg font-bold">Bangladesh Railway Helpline</h1>
                 <P class="text-[#5c5c5c]">163</P>
                 </div>
