--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 <body>
     <section>
         <!--navbar-->
-        <nav class=" flex justify-between items-center gap-3 w-full mx-auto h-[100px]">
+        <nav class=" flex flex-col sm:flex-row bg-white justify-between items-center gap-3 sm:w-full mx-auto sm:h-[110px]">
             <div class=" flex ml-[60px]">
-                <img src="./assets/logo.png" class="w-[50px] h-[50px]" alt="">
+                <img src="./assets/logo.png" class=" sm:mt-2 w-[50px] h-[50px]" alt="">
                 <h1 class="font-extrabold text-xl text-[#006747] ml-3">Emergency<br> Service</h1>
             </div>
             
 
-            <div class="flex gap-5 mr-[60px]">
-                <div class="">
+            <div class="flex gap-5 sm:mb-2 mr-[60px]">
+                <div class="sm: ml-14">
                     <button class=" flex gap-3 w-[123px] h-[52px] justify-center items-center bg-[#41ff6b1a] rounded-[50px] font-bold text-[16px]">0 <img src="./assets/heart.png" class="w-[30px] h-[30px]" alt=""></button>
                 </div>
                 <div class="">
@@ -39,26 +39,29 @@
     </section>
 
     <!--bannar section-->
-    <div class="w-full h-[239px] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center p-2">
+    <div class="sm:w-full sm:flex-col h-[239px] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center p-2">
         <img src="./assets/logo-dark.png" class="w-[92px] h-[92px] mx-auto mt-[20px]" alt="">
-        <h1 class="text-[40px] font-bold text-white">Emergency Service Directory</h1>
-        <p class="text-xl text-white">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+        <h1 class="lg:text-[40px] md:text-xl sm:text-2xl font-bold text-white">Emergency Service Directory</h1>
+        <p class="text-xl sm:text-lg sm:w-full text-white">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
     </div>
 
     <!--card section-->
-    <div class="parent_div flex justify-between bg-[#f5fff6] w-full h-full ">
-        <div class="left_div ml-[60px] mt-[48px] mb-[45px] grid grid-cols-3 gap-[] w-[75%] h-[1140px]">
+    <div class="parent_div flex flex-col lg:flex-row gap-6 px-4 sm:px-8 lg:px-16  justify-between bg-[#f5fff6] md:w-full h-full ">
+
+        <div class="left_div ml-[60px] sm:ml-0 md:ml-0 mt-[48px] mb-[45px] grid grid-cols-1  sm:grid-cols-2 lg:grid-cols-3 gap-6 flex-1 w-[75%] h-[1140px]">
+
             <div class="card-first w-[436px] h-[360px] border-2 border-gray-200 bg-white p-7 rounded-xl shadow-sm">
                 <div class="flex justify-between items-center">
-                    <div class="w-[60px] h-[60px] bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
-                        <img src="./assets/emergency.png" class="w-[32px] h-[32px]" alt="">
+                    <div class="w-[60px] h-[60px] sm:w-14 sm:h-14  bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
+                        <img src="./assets/emergency.png" class="w-[32px] h-[32px] sm:w-8 sm:h-8" alt="">
                     </div>
                     <i class="fa-regular fa-heart"></i>
                 </div>
-                <h1 class="font-bold text-2xl mt-[16px]">National Emergency Number</h1>
-                <p class="text-[#5c5c5c]">National Emergency</p>
-                <h1 class="text-3xl font-bold mt-[24px] mb-[3px]">999</h1>
-                <button class=" bg-[#f2f2f2] w-[53px] h-[37px] rounded-3xl">All</button>
+                <h1 class="font-bold text-2xl sm:text-xl mt-[16px]">National Emergency Number</h1>
+                <p class="text-[#5c5c5c] text-xs sm:text-sm">National Emergency</p>
+                <h1 class="text-3xl sm:text-3xl font-bold mt-[24px] mb-[3px]">999</h1>
+
+                <button class=" bg-[#f2f2f2] w-[53px] h-[37px] rounded-3xl px-3 py-1 text-xs">All</button>
                 <div class="btn-first-card flex gap-5 mt-[24px]">
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] text-[#5c5c5c]"><i class="fa-regular fa-copy"></i> Copy</button>
                     <button class="border-2 border-gray-300 rounded-lg w-[182.33px] h-[40px] bg-[#00a63e] text-white"><i class="fa-solid fa-phone"></i> Call</button>
