create heart icon with js

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- Buttons -->
         <div class="flex flex-col sm:flex-row gap-3 sm:gap-5 mr-0 sm:mr-[60px]">
-            <button class="flex gap-2 sm:gap-3 w-[123px] h-[52px] justify-center items-center bg-[#41ff6b1a] rounded-full font-bold text-[16px]">
+            <button id="navbar-heart" class="flex gap-2 sm:gap-3 w-[123px] h-[52px] justify-center items-center bg-[#41ff6b1a] rounded-full font-bold text-[16px]">
                 0 <img src="./assets/heart.png" class="w-[25px] h-[25px] sm:w-[30px] sm:h-[30px]" alt="">
             </button>
             <button class="flex gap-2 sm:gap-3 w-[123px] h-[52px] justify-center items-center bg-[#41ff6b1a] rounded-full font-bold text-[16px]">
@@ -56,7 +56,7 @@
 <!--card section-->
 <section class="bg-[#f5fff6] px-4 flex flex-col lg:flex-row gap-6 sm:px-8    lg:px-16 py-10">
 <!--left div-->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 px-4 sm:px-6 lg:px-0 lg:w-[80%]">
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 px-4 sm:px-6 lg:px-0 lg:w-[80%]">
 
   <!-- Card 1 -->
   <div class="border-2 border-gray-200 bg-white p-6 rounded-xl shadow-sm flex flex-col">
@@ -64,7 +64,7 @@
       <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
         <img src="./assets/emergency.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
       </div>
-      <i class="fa-regular fa-heart"></i>
+      <i class="fa-regular fa-heart text-gray-500 hover:text-red-500 card-heart"></i>
     </div>
     <h1 class="font-bold text-xl sm:text-2xl mt-4">National Emergency Number</h1>
     <p class="text-[#5c5c5c] text-sm sm:text-base">National Emergency</p>
@@ -86,7 +86,7 @@
       <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
         <img src="./assets/police.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
       </div>
-      <i class="fa-regular fa-heart"></i>
+      <i class="fa-regular fa-heart text-gray-500 hover:text-red-500 card-heart"></i>
     </div>
     <h1 class="font-bold text-xl sm:text-2xl mt-4">Police Helpline Number</h1>
     <p class="text-[#5c5c5c] text-sm sm:text-base">Police</p>
@@ -108,7 +108,7 @@
       <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
         <img src="./assets/fire-service.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
       </div>
-      <i class="fa-regular fa-heart"></i>
+      <i class="fa-regular fa-heart text-gray-500 hover:text-red-500 card-heart"></i>
     </div>
     <h1 class="font-bold text-xl sm:text-2xl mt-4">Fire Service Number</h1>
     <p class="text-[#5c5c5c] text-sm sm:text-base">Fire Service</p>
@@ -130,7 +130,7 @@
       <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
         <img src="./assets/ambulance.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
       </div>
-      <i class="fa-regular fa-heart"></i>
+      <i class="fa-regular fa-heart text-gray-500 hover:text-red-500 card-heart"></i>
     </div>
     <h1 class="font-bold text-xl sm:text-2xl mt-4">Ambulance Service</h1>
     <p class="text-[#5c5c5c] text-sm sm:text-base">Ambulance</p>
@@ -152,7 +152,7 @@
       <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
         <img src="./assets/brac.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
       </div>
-      <i class="fa-regular fa-heart"></i>
+      <i class="fa-regular fa-heart text-gray-500 hover:text-red-500 card-heart"></i>
     </div>
     <h1 class="font-bold text-xl sm:text-2xl mt-4">Women & Child Helpline</h1>
     <p class="text-[#5c5c5c] text-sm sm:text-base">Women & Child Helpline</p>
@@ -174,7 +174,7 @@
       <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
         <img src="./assets/police.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
       </div>
-      <i class="fa-regular fa-heart"></i>
+      <i class="fa-regular fa-heart text-gray-500 hover:text-red-500 card-heart"></i>
     </div>
     <h1 class="font-bold text-xl sm:text-2xl mt-4">Anti-Corruption Helpline</h1>
     <p class="text-[#5c5c5c] text-sm sm:text-base">Anti-Corruption</p>
@@ -196,7 +196,7 @@
       <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
         <img src="./assets/emergency.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
       </div>
-      <i class="fa-regular fa-heart"></i>
+      <i class="fa-regular fa-heart text-gray-500 hover:text-red-500 card-heart"></i>
     </div>
     <h1 class="font-bold text-xl sm:text-2xl mt-4">Electricity Helpline</h1>
     <p class="text-[#5c5c5c] text-sm sm:text-base">Electricity Outage</p>
@@ -218,7 +218,7 @@
       <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
         <img src="./assets/brac.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
       </div>
-      <i class="fa-regular fa-heart"></i>
+      <i class="fa-regular fa-heart text-gray-500 hover:text-red-500 card-heart"></i>
     </div>
     <h1 class="font-bold text-xl sm:text-2xl mt-4">Brac Helpline</h1>
     <p class="text-[#5c5c5c] text-sm sm:text-base">Brac</p>
@@ -240,7 +240,7 @@
       <div class="w-14 h-14 sm:w-16 sm:h-16 bg-[#ffe3e2] flex justify-center items-center rounded-2xl">
         <img src="./assets/Bangladesh-Railway.png" class="w-8 h-8 sm:w-10 sm:h-10" alt="">
       </div>
-      <i class="fa-regular fa-heart"></i>
+      <i class="fa-regular fa-heart text-gray-500 hover:text-red-500 card-heart"></i>
     </div>
     <h1 class="font-bold text-xl sm:text-2xl mt-4">Bangladesh Railway Helpline</h1>
     <p class="text-[#5c5c5c] text-sm sm:text-base">Bangladesh Railway</p>
